[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Punnett/PunnettSquare.gd" type="Script" id=1]
[ext_resource path="res://UI/Punnett/PunnettCell.tscn" type="PackedScene" id=2]

[node name="GridContainer" type="GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopLeftCell" parent="." instance=ExtResource( 2 )]
margin_right = 70.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 30 )

[node name="PaternalGene1" parent="." instance=ExtResource( 2 )]
margin_left = 74.0
margin_right = 174.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )

[node name="PaternalGene2" parent="." instance=ExtResource( 2 )]
margin_left = 178.0
margin_right = 278.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )

[node name="MaternalGene1" parent="." instance=ExtResource( 2 )]
margin_top = 34.0
margin_right = 70.0
margin_bottom = 84.0
rect_min_size = Vector2( 70, 50 )

[node name="Child1" parent="." instance=ExtResource( 2 )]
margin_left = 74.0
margin_top = 34.0
margin_right = 174.0
margin_bottom = 84.0
rect_min_size = Vector2( 100, 50 )

[node name="Child2" parent="." instance=ExtResource( 2 )]
margin_left = 178.0
margin_top = 34.0
margin_right = 278.0
margin_bottom = 84.0
rect_min_size = Vector2( 100, 50 )

[node name="MaternalGene2" parent="." instance=ExtResource( 2 )]
margin_top = 88.0
margin_right = 70.0
margin_bottom = 138.0
rect_min_size = Vector2( 70, 50 )

[node name="Child3" parent="." instance=ExtResource( 2 )]
margin_left = 74.0
margin_top = 88.0
margin_right = 174.0
margin_bottom = 138.0
rect_min_size = Vector2( 100, 50 )

[node name="Child4" parent="." instance=ExtResource( 2 )]
margin_left = 178.0
margin_top = 88.0
margin_right = 278.0
margin_bottom = 138.0
rect_min_size = Vector2( 100, 50 )
